--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^1.1.3",
+    "@cosmograph/cosmos": "^1.0.0",
     "@types/node": "^18.0.0",
     "@umijs/max": "^4.0.2",
     "antd": "^4.20.7",
     "browserify-fs": "^1.0.0",
+    "btoa": "^1.2.1",
     "react": "^18.2.0"
   },
   "devDependencies": {
